# version-it-ng

./: .version-it  .version-it-stats-cache.json  Cargo.toml  flake.nix  package.json  readme.md
.github/workflows/: ci.yml
crates/version-it-blocks/: Cargo.toml
crates/version-it-blocks/src/: lib.rs
crates/version-it-cli/: Cargo.toml
crates/version-it-cli/src/: commands.rs  git_ops.rs  main.rs  output.rs
crates/version-it-cli/tests/: cli.rs
crates/version-it-composer/: Cargo.toml
crates/version-it-composer/src/: lib.rs
crates/version-it-config/: Cargo.toml
crates/version-it-config/src/: lib.rs
crates/version-it-core/: Cargo.toml
crates/version-it-core/src/: blocks.rs  composer.rs  config.rs  git.rs  lib.rs  package.rs  templates.rs  version.rs
crates/version-it-git/: Cargo.toml
crates/version-it-git/src/: lib.rs
crates/version-it-package/: Cargo.toml
crates/version-it-package/src/: lib.rs
crates/version-it-templates/: Cargo.toml
crates/version-it-templates/src/: lib.rs
crates/version-it-utils/: Cargo.toml
crates/version-it-utils/src/: lib.rs
crates/version-it-version/: Cargo.toml
crates/version-it-version/src/: lib.rs
examples/: demo.rs  simple-templates.yaml  version-templates.yaml
examples/monorepo-example/: .version-it  README.md  VERSION.txt  bump-demo.sh  demo.sh  monorepo-demo.sh  version.h  version.py
examples/templates/: version.h.hbs  version.py.hbs
include/: version.h
src/: version.py
