[package]
name = "version-it-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI interface for version-it"

[[bin]]
name = "version-it"
path = "src/main.rs"

[dependencies]
version-it-core = { path = "../version-it-core" }
version-it-version = { path = "../version-it-version" }
version-it-config = { path = "../version-it-config" }
version-it-package = { path = "../version-it-package" }
version-it-templates = { path = "../version-it-templates" }
version-it-git = { path = "../version-it-git" }
version-it-blocks = { path = "../version-it-blocks" }
version-it-composer = { path = "../version-it-composer" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"