[package]
name = "version-it-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core versioning logic for version-it"

[dependencies]
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
handlebars = "4.0"
toml = "0.8"
regex = "1.10"
walkdir = "2.4"
num_cpus = "1.16"
sysinfo = "0.30"
version-it-version = { path = "../version-it-version" }
version-it-config = { path = "../version-it-config" }
version-it-package = { path = "../version-it-package" }
version-it-templates = { path = "../version-it-templates" }
version-it-git = { path = "../version-it-git" }
version-it-blocks = { path = "../version-it-blocks" }
version-it-composer = { path = "../version-it-composer" }
version-it-utils = { path = "../version-it-utils" }